--- a/src/app/components/counter/counter-list/counter-list.component.html
+++ b/src/app/components/counter/counter-list/counter-list.component.html
@@ -15,8 +15,8 @@
       <td>{{c.id}}</td>
       <td>{{c.createdAt}}</td>
       <td>{{c.updatedAt}}</td>
-      <td>{{c.left.name}} {{c.left.value}}</td>
-      <td>{{c.right.name}} {{c.right.value}}</td>
+      <td>{{c.leftName}} {{c.leftValue}}</td>
+      <td>{{c.rightName}} {{c.rightValue}}</td>
       <td><button (click)="edit(c)">Cargar</button><button (click)="eliminar(c)">Eliminar</button></td>
     </tr>
   </tbody>
