--- a/src/app/components/counter/counter-edit/counter-edit.component.scss
+++ b/src/app/components/counter/counter-edit/counter-edit.component.scss
@@ -3,3 +3,79 @@
   font-size: 14px;
   display: flex;
 }
+
+h6{
+    color: #fff;
+}
+
+span{
+    color: #333;
+    font-weight: 600;
+    padding: 0px 15px;
+}
+#titulo{
+    color: #fda205;
+    font-size: 45px;
+    font-weight: 600;
+}
+
+.disabled {
+  pointer-events: none;
+  opacity: 0.6;
+  cursor: not-allowed;
+  text-decoration: none;
+}
+
+.link-btn {
+  background: none;
+  border: none;
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+
+  &:disabled {
+    color: gray;
+    cursor: not-allowed;
+  }
+}
+
+.value {
+      margin-top: 0px;
+    font-size: 540px;
+    margin-bottom: 0px;
+        padding-top: 200px;
+    padding-bottom: 250px;
+}
+.marcador {
+
+    display: ruby;
+
+}
+
+.control {
+      margin-top: 0px;
+    font-size: 540px;
+    margin-bottom: 0px;
+}
+
+.two-columns {
+    display:flex; 
+    gap:1rem; 
+    height:60vh;
+}
+
+.two-columns-sup {
+    display:flex; 
+    gap:1rem; 
+
+}
+
+.team-name {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
