--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,6 +1,6 @@
 <header>
-  <div>Bienvenido {{userName}}</div>
-  <!--<h1>{{appTitle}}</h1>-->
+  <!--<div>Bienvenido {{userName}}</div>
+  h1>{{appTitle}}</h1>-->
 </header>
 <!--
 <nav class="menu">
