--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,3 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-
 
 <main class="main">
   <div class="content">
@@ -17,44 +7,28 @@
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side menu">
       <div class="pill-group">
-        
-         <a
-            class="pill"
-            (click)="createCounter()"
-            target="_parent"
-            rel="noopener"
-          >
-            <span>Crear contador nuevo</span>
-            
-          </a>
-        @for (item of [
-          { title: '🔎Tus contadores', link: '/app/list' },
-          { title: 'Cargar contador', link: '/app/open' },
-          { title: '⚙️ Configuración', link: '/app/config' },
-          { title: 'Logado', link: '/login' },
-        ]; track item.title) {
+        @for (item of menuItems; track item.title) {
           <a
+            *ngIf="item.link"
             class="pill"
             [href]="item.link"
-            target="_parent"
             rel="noopener"
           >
-            <span>{{ item.title }}</span>
-            
+            <span>{{ item.icon }} {{ item.title }}</span>
+          </a>
+
+          <a
+            *ngIf="item.action"
+            class="pill"
+            (click)="item?.action()"
+          >
+            <span>{{ item.icon }} {{ item.title }}</span>
           </a>
         }
       </div>
     </div>
   </div>
 </main>
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
 <router-outlet />
