--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,42 @@
+<ng-container *ngIf="!(auth.isLoading$ | async); else loading">
+  <main class="main">
+    <div class="content">
+      <div class="left-side">
+        <h1>{{ title }}</h1>
+      </div>
+      <div class="divider" role="separator" aria-label="Divider"></div>
+      <div class="right-side menu">
+        <div class="pill-group">
+          @for (item of menuItems; track item.title) {
+            <a
+              *ngIf="item.link"
+              class="pill"
+              [href]="item.link"
+              rel="noopener"
+            >
+              <span>{{ item.icon }} {{ item.title }}</span>
+            </a>
 
-<main class="main">
-  <div class="content">
-    <div class="left-side">
-      <h1>{{ title }}</h1>
-    </div>
-    <div class="divider" role="separator" aria-label="Divider"></div>
-    <div class="right-side menu">
-      <div class="pill-group">
-        @for (item of menuItems; track item.title) {
-          <a
-            *ngIf="item.link"
-            class="pill"
-            [href]="item.link"
-            rel="noopener"
-          >
-            <span>{{ item.icon }} {{ item.title }}</span>
-          </a>
-
-          <a
-            *ngIf="item.action"
-            class="pill"
-            (click)="item?.action()"
-          >
-            <span>{{ item.icon }} {{ item.title }}</span>
-          </a>
-        }
+            <a
+              *ngIf="item.action"
+              class="pill"
+              (click)="item?.action()"
+            >
+              <span>{{ item.icon }} {{ item.title }}</span>
+            </a>
+          }
+        </div>
       </div>
     </div>
+  </main>
+
+
+  <router-outlet />
+</ng-container>
+
+<!-- Pantalla de carga mientras Firebase inicializa -->
+<ng-template #loading>
+  <div class="loading-screen">
+    <p>Cargando sesión...</p>
   </div>
-</main>
-
-
-<router-outlet />
+</ng-template>
