--- a/src/app/components/counter/counter-list/counter-list.component.html
+++ b/src/app/components/counter/counter-list/counter-list.component.html
@@ -8,9 +8,18 @@
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
         <td mat-cell *matCellDef="let element">
-          <span class="id-text">{{ element.id }}</span>
-          <button mat-icon-button (click)="copyId(element.id)" matTooltip="Copiar ID">
-            <mat-icon>content_copy</mat-icon>
+          <span class="id-text">{{ element.id }} </span>
+          <button class="copy-btn copya-btn" (click)="copyId(element.id)" title="Copiar ID">
+            <i class="fa fa-copy"></i>
+          </button>
+          <!-- 📋 Copiar URL actual -->
+          <button
+            type="button"
+            class="copy-btn copya-btn"
+            title="Copiar URL"
+            (click)="copyCurrentUrl(element.id)"
+          >
+            <i class="fa fa-link"></i> <!-- o lucide: <LinkIcon /> -->
           </button>
         </td>
       </ng-container>
@@ -31,7 +40,7 @@
       <ng-container matColumnDef="leftName">
         <th mat-header-cell *matHeaderCellDef>Local (Set Activo)</th>
         <td mat-cell *matCellDef="let element">
-          <strong>{{ element.leftName }}</strong> {{ element.leftValue }}
+          <strong>{{ element.leftName }} - {{ element.leftValue }} </strong>
         </td>
       </ng-container>
 
@@ -39,7 +48,7 @@
       <ng-container matColumnDef="rightName">
         <th mat-header-cell *matHeaderCellDef>Visitante (Set Activo)</th>
         <td mat-cell *matCellDef="let element">
-          <strong>{{ element.rightName }}</strong> {{ element.rightValue }}
+          <strong>{{ element.rightName }} - {{ element.rightValue }} </strong> 
         </td>
       </ng-container>
 
