--- a/src/app/components/counter/counter-list/counter-list.component.scss
+++ b/src/app/components/counter/counter-list/counter-list.component.scss
@@ -54,3 +54,11 @@ th.mat-header-cell {
   background: #388e3c;
   color: white;
 }
+
+.copya-btn {
+  border: none;
+    background: #e9ecef;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: 0.2s;
+}
