--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -177,3 +177,10 @@
   font-size: 1.2rem;
   color: #555;
 }
+
+.subtitle {
+  color: #666;
+  font-size: 0.95rem;
+  margin-bottom: 1.5rem;
+  margin-left: 1%;
+}
