--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,6 +1,9 @@
 <div class="login-container">
   <div class="login-card">
     <h1>🏐 Inicio sesión</h1>
+    <p class="subtitle">
+      Para crear un marcador, por favor, introduce tus credenciales, si no, registrate gratis solo con tu correo.
+    </p>
 
     <div *ngIf="error" class="error-msg">
       {{ error }}
