--- a/src/app/components/counter/counter-list/counter-list.component.html
+++ b/src/app/components/counter/counter-list/counter-list.component.html
@@ -59,15 +59,21 @@
       </ng-container>
 
       <!-- Acciones -->
+      <!-- Acciones -->
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Acciones</th>
+
         <td mat-cell *matCellDef="let element">
-          <button mat-raised-button color="primary" (click)="edit(element)">
-            Cargar
+          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Más acciones">
+            <mat-icon>more_vert</mat-icon>
           </button>
-          <button mat-stroked-button color="warn" (click)="eliminar(element)">
-            Eliminar
-          </button>
+
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item *ngFor="let opt of actionOptions" (click)="executeAction(opt, element)">
+              <mat-icon>{{ opt.icon }}</mat-icon>
+              <span>{{ opt.label }}</span>
+            </button>
+          </mat-menu>
         </td>
       </ng-container>
 
@@ -82,4 +88,48 @@
       [pageSize]="10"
     ></mat-paginator>
   </div>
+
+
+  
+
+  <div class="table-container authorized" *ngIf="authorizedDataSource?.data!.length > 0">
+    <h2>✔ Contadores autorizados</h2>
+    <table mat-table [dataSource]="authorizedDataSource" matSort class="mat-elevation-z3">
+
+      <!-- Reutilizamos las mismas columnas excepto Acciones -->
+      <ng-container *ngFor="let col of authorizedColumns" [matColumnDef]="col">
+        <th mat-header-cell *matHeaderCellDef>{{ col }}</th>
+        <td mat-cell *matCellDef="let element">{{ element[col] }}</td>
+      </ng-container>
+
+      <!-- Solo acción cargar -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Acciones</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-menu-item (click)="edit(element)">
+            <mat-icon>edit</mat-icon>
+            <span>Cargar</span>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="authorizedDisplayed"></tr>
+      <tr mat-row *matRowDef="let row; columns: authorizedDisplayed"></tr>
+    </table>
+
+    <mat-paginator [pageSize]="5"></mat-paginator>
+  </div>
+  
+  <!-- Modal de confirmación -->
+  <div class="modal-overlay" *ngIf="showDeleteConfirm" (click)="cancelDelete()">
+    <div class="modal" (click)="$event.stopPropagation()">
+      <h3>¿Seguro que quieres eliminar el marcador "{{ rowDelete?.leftName }} vs {{ rowDelete?.rightName }}"?</h3>
+      <p>¿Seguro que quieres eliminar este set?</p>
+      <div class="modal-actions">
+        <button class="cancel" (click)="cancelDelete()">Cancelar</button>
+        <button class="confirm" (click)="confirmDelete()">Eliminar</button>
+      </div>
+    </div>
+  </div>
+
 </div>
